@@ -3,6 +3,7 @@ abstract: 'Class for random day generation'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  DateTime: 0
   English: 0
   Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
