@@ -1,10 +1,11 @@
 use strict;
 use warnings;
 
+use DateTime;
 use English qw(-no_match_vars);
 use Error::Pure::Utils qw(clean);
 use Random::Day::InTheFuture;
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 6;
 use Test::NoWarnings;
 
 # Test.
@@ -36,4 +37,16 @@ eval {
 };
 is($EVAL_ERROR, "Parameter 'dt_to' must be a 'DateTime' object.\n",
 	"Parameter 'dt_to' must be a 'DateTime' object (bad).");
+clean();
+
+# Test.
+eval {
+	Random::Day::InTheFuture->new(
+		'dt_to' => DateTime->new(
+			'year' => '1977',
+		),
+	);
+};
+is($EVAL_ERROR, "Parameter 'dt_from' must have older or same date than 'dt_to'.\n",
+	"Parameter 'dt_from' must have older or same date than 'dt_to'.");
 clean();
